# BlenderFig

./: .gitignore  Readme.md  pyproject.toml  setup.py
assets/: Basketball_15x28.fbx  Fight_000102.png.json  config_skeleton.yml  s04_Hug1_000085.jpg.json  thuman2-keypoints3d-000000.json  xbot.fbx
assets/2026V2M/: 00000001_keling2_pred_seed42.fbx
assets/field/: s04_Hug 1_000070.jpg.json  s04_Hug 1_000070_root.txt
examples/: compose_render_background.py  render_1v1p.py  render_animation.py  render_any_fbx.py  render_basketball.py  render_basketball_xbot.py  render_bbox3d.py  render_by_blender.py  render_compare_fbx.py  render_example.py  render_fbx_video3d.py  render_foot_motion.py  render_grid.py  render_grids.py  render_ground_example.py  render_ground_fbx.py  render_megasam.py  render_multiplane.py  render_npz_smpl.py  render_our_fbx.py  render_our_fbx_with_texture.py  render_skel.py  render_skel_gt_pred.py  render_skel_mocap.py  render_skeleton_keyframe.py  render_skeleton_sequence.py  render_skeleton_sequence_in_one_scene.py  render_skelfield.py  render_smpl_fbx_camera.py  render_smpl_mesh.py  render_smpl_seq_teaser.py  render_smpl_shot.py  render_smpl_shot_ground.py  render_smpl_shot_ground_endeffect.py  render_smpl_shot_start.py
examples/animation/: animate_ball.py  animate_ball_in_city.py
examples/fig_v2m/: render_all.sh  render_config.json  render_config_comparison.json  render_config_simple.json  render_config_simple1.json  render_config_simple2.json  render_config_ski.json  render_diverse.py  render_fbx_video3d.py  render_ground_fbx.py  render_ground_seq.py  render_ground_seq_flow.py  render_ground_seq_v2.py  render_gv_coord.py  render_scheduler.py  render_smpl_seq_teaser.py  render_v2m.sh  render_wv_space.py
examples/figures23/: render_CMU.py  render_camera_wireframe.py  render_heatvolume.py  (+2 more)
myblender/: animation.py  camera.py  camera_file.py  color.py  entry.py  fbxtools.py  geometry.py  grid.py  imageio.py  material.py  read_smpl.py  retarget.py  setup.py  skeleton.py  video3d.py
scripts/: generate_skelfield.py  render_all_slice.py
(+37 files in other folders)
