[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "myblender"
version = "0.2.0"
description = "Blender Toolbox for 3D visualization and rendering"
readme = "Readme.md"
license = {text = "MIT"}
authors = [
    {name = "Qing Shuai", email = "s_q@zju.edu.cn"}
]
maintainers = [
    {name = "Qing Shuai", email = "s_q@zju.edu.cn"}
]
keywords = ["blender", "3d", "visualization", "rendering", "computer-vision"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Multimedia :: Graphics :: 3D Rendering",
]
requires-python = ">=3.7"
dependencies = [
    "PyYAML",
    "opencv-python",
    "tqdm",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "ipdb",
    "pytest",
    "black",
    "flake8",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/chingswy/BlenderFig"
Repository = "https://github.com/chingswy/BlenderFig"
Issues = "https://github.com/chingswy/BlenderFig/issues"
Documentation = "https://github.com/chingswy/BlenderFig/blob/main/Readme.md"

[project.scripts]
blenderqing = "myblender.entry:main"
blenderqingback = "myblender.entry:back"

[tool.setuptools.packages.find]
where = ["."]
include = ["myblender*"]

[tool.setuptools.package-data]
myblender = ["objs/*"]

[tool.black]
line-length = 88
target-version = ['py37']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 